--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		  <img src="static/images/icons/gplus_32.png" />
 		  <span>Google+</span>
 		</a>
-		<a class="service" href="http://github.com/astoon" target="_blank">
+		<a class="service" href="http://github.com/ilshad" target="_blank">
 		  <img src="static/images/icons/github_32.png" />
 		  <span>Github</span>
 		</a>
