* index.html: description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="description" content="About Ilshad Khabibullin" />
-    <meta name="keywords" content="Ilshad Khabibullin astoon" />
+    <meta name="keywords" content="Ilshad Khabibullin astoon Ильшад Хабибуллин" />
     <meta name="google-site-verification" content="" />
     <meta name="bitly-verification" content=""/>
     <title>Ilshad Khabibullin</title>
