font icons used

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 	    <td>
 	      <div id="services">
 		<a class="service" href="https://plus.google.com/u/0/100032646707637951378/posts" target="_blank">
-		  <img src="static/images/icons/gplus_32.png" />
+		  <span class="symbol">&#xe239;</span>
 		  <span>Google+</span>
 		</a>
 		<a class="service" href="http://github.com/ilshad" target="_blank">
-		  <img src="static/images/icons/github_32.png" />
+		  <span class="symbol">&#xe237;</span>
 		  <span>Github</span>
 		</a>
 		<a class="service" href="http://www.flickr.com/photos/astoon" target="_blank">
-		  <img src="static/images/icons/flickr_32.png" />
+		  <span class="symbol">&#xe229;</span>
 		  <span>Flickr</span>
 		</a>
 		<div class="contact">
