--- a/index.html
+++ b/index.html
@@ -33,21 +33,26 @@
 	    </td>
 	    <td>
 	      <div id="services">
+		<a class="service" href="http://github.com/ilshad" target="_blank">
+		  <span class="symbol">&#xe237;</span>
+		  <span>GitHub</span>
+		</a>
 		<a class="service" href="https://plus.google.com/u/0/100032646707637951378/posts" target="_blank">
 		  <span class="symbol">&#xe239;</span>
 		  <span>Google+</span>
-		</a>
-		<a class="service" href="http://github.com/ilshad" target="_blank">
-		  <span class="symbol">&#xe237;</span>
-		  <span>Github</span>
 		</a>
 		<a class="service" href="http://www.flickr.com/photos/astoon" target="_blank">
 		  <span class="symbol">&#xe229;</span>
 		  <span>Flickr</span>
 		</a>
-		<div class="contact">
-		  astoon.net@gmail.com
-		</div>
+		<a class="service" href="http://twitter.com/astoon" target="_blank">
+		  <span class="symbol">&#xe286;</span>
+		  <span>Twitter</span>
+		</a>
+		<a class="service" href="mailto:astoon.net@gmail.com">
+		  <span class="symbol">&#xe224;</span>
+		  <span>Mail</span>
+		</a>
 	      </div>
 	    </td>
 	  </tr>
