--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		  <span class="symbol">&#xe237;</span>
 		  <span>GitHub</span>
 		</a>
-		<a class="service" href="https://plus.google.com/u/0/100032646707637951378/posts" target="_blank">
+		<a class="service" href="https://plus.google.com/+IlshadKhabibullin" target="_blank">
 		  <span class="symbol">&#xe239;</span>
 		  <span>Google+</span>
 		</a>
