--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="google-site-verification" content="" />
     <meta name="bitly-verification" content=""/>
     <title>Ilshad Khabibullin</title>
-    <link rel="icon" type="image/png" href="static/images/favicon.png" />
+    <link rel="icon" type="image/png" href="static/images/favicon-1.png" />
     <link href="http://fonts.googleapis.com/css?family=Arvo:regular,bold&v1" rel="stylesheet" type="text/css" />
     <link href="http://fonts.googleapis.com/css?family=Droid+Sans&v1" rel="stylesheet" type="text/css" />
     <link href="static/css/style.css" rel="stylesheet" type="text/css" />
@@ -22,12 +22,11 @@
 	  <tr>
 	    <td>
 	      <div id="bio">
-		<div id="name">ilshad.com</div>
-		<div id="description">
-		  Hi, I am Ilshad Khabibullin
-		</div>
 		<div id="logo">
-		  <img src="static/images/userpic.jpg" />
+		  <img src="static/images/userpic.jpg" width="300px" />
+		</div>
+		<div id="description">
+		  Hi, I am Ilshad Khabibullin.
 		</div>
 	      </div>
 	    </td>
@@ -71,9 +70,9 @@
 	    el.css("left", left  + "px");
 	    return el;
 	};
-	      
+
         doPositioning($("#outer"));
-	
+
         $(window).resize(function() {
 	    doPositioning($("#outer"));
         });
