--- a/index.html
+++ b/index.html
@@ -2,84 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="description" content="About Ilshad Khabibullin" />
     <meta name="keywords" content="Ilshad Khabibullin astoon Ильшад Хабибуллин" />
-    <meta name="google-site-verification" content="" />
-    <meta name="bitly-verification" content=""/>
     <title>Ilshad Khabibullin</title>
-    <link rel="icon" type="image/png" href="static/images/favicon-1.png" />
-    <link href="http://fonts.googleapis.com/css?family=Arvo:regular,bold&v1" rel="stylesheet" type="text/css" />
-    <link href="http://fonts.googleapis.com/css?family=Droid+Sans&v1" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/png" href="static/images/comics-favicon.png" />
+    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link href="static/css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="outer">
-      <div id="inner">
-	<table>
-	  <tr>
-	    <td>
-	      <div id="bio">
-		<div id="logo">
-		  <img src="static/images/userpic.jpg" width="300px" />
-		</div>
-		<div id="description">
-		  Hi, I am Ilshad Khabibullin.
-		</div>
-	      </div>
-	    </td>
-	    <td>
-	      <div id="services">
-		<a class="service" href="http://github.com/ilshad" target="_blank">
-		  <span class="symbol">&#xe237;</span>
-		  <span>GitHub</span>
-		</a>
-		<a class="service" href="https://plus.google.com/+IlshadKhabibullin" target="_blank">
-		  <span class="symbol">&#xe239;</span>
-		  <span>Google+</span>
-		</a>
-		<a class="service" href="http://twitter.com/astoon" target="_blank">
-		  <span class="symbol">&#xe286;</span>
-		  <span>Twitter</span>
-		</a>
-		<a class="service" href="http://www.flickr.com/photos/astoon" target="_blank">
-		  <span class="symbol">&#xe229;</span>
-		  <span>Flickr</span>
-		</a>
-		<a class="service" href="mailto:astoon.net@gmail.com">
-		  <span class="symbol">&#xe224;</span>
-		  <span>Mail</span>
-		</a>
-	      </div>
-	    </td>
-	  </tr>
-	</table>
-	<div style="clear: both;"></div>
+    <div class="container">
+      <div class="row mt-5">
+        <div class="col text-center">
+          <img class="rounded mx-auto d-block mb-3 userpic" src="static/images/comics-pic.jpg" />
+        </div>
+        <div class="col text-center">
+          <h1>Hi, I'm Ilshad Khabibullin</h1>
+          <div class="social-links mt-3">
+            <div><a href="https://github.com/ilshad"><i class="fab fa-github mr-2"></i>github</a></div>
+            <div><a href="https://twitter.com/astoon"><i class="fab fa-twitter mr-2"></i>twitter</a></div>
+            <div><a href="https://www.flickr.com/photos/astoon"><i class="fab fa-flickr mr-2"></i>flickr</a></div>
+            <div class="mt-5"><a href="mailto:astoon.net@gmail.com"><i class="fas fa-at mr-2"></i>email</a></div>
+          </div>
+        </div>
       </div>
     </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-    <script type="text/javascript">
-	var doPositioning = function(el) {
-	    var yoffset = -1 * ($(window).height() - el.outerHeight()) * 0.3;
-	    var top = (($(window).height() - el.outerHeight()) / 2) + $(window).scrollTop() + yoffset;
-	    var left = (($(window).width() - el.outerWidth()) / 2) + $(window).scrollLeft();
-	    el.css("position","absolute");
-	    el.css("top", top + "px");
-	    el.css("left", left  + "px");
-	    return el;
-	};
-
-        doPositioning($("#outer"));
-
-        $(window).resize(function() {
-	    doPositioning($("#outer"));
-        });
-
-        document.addEventListener("touchmove", function (e) {
-	    e.preventDefault();
-        });
-    </script>
   </body>
 </html>
